adding the actual frame

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
   
     "name": "try this",
     "description": "try this launcher to waste your time",
     "version": "1.0.0",
-    "optional_permissions": [
-      "unlimitedStorage"
+   
+    "permissions": [
+      "tabs", "storage", "activeTab"
+      
     ],
+    "background": {
+      "scripts": ["background.js"]
+      
+  },
     
-      "action": {
+      "browser_action": {
 
         "default_popup": "main.html"
        }
