--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,10 @@
       "tabs", "storage", "activeTab"
       
     ],
-    "background": {
-      "scripts": ["background.js"]
+    // "background": {
+    //   "scripts": ["background.js"]
       
-  },
+  // },
     
       "browser_action": {
 
